--- a/modules/gcp/application_settings.conf
+++ b/modules/gcp/application_settings.conf
@@ -5,7 +5,7 @@
   },
   "enable_proxy": {},
   "hostname": {
-    "value": "portal.dev.yugabyte.com"
+    "value": "portal.sdu-dev.yugabyte.com"
   },
   "http_proxy": {},
   "https_enabled": {
