--- a/modules/gcp/replicated.conf
+++ b/modules/gcp/replicated.conf
@@ -4,10 +4,10 @@
   "DaemonAuthenticationPassword": "password", // change this
 
   // configure https (remove this if you do not want https)
-  "TlsBootstrapType":             "server-path",
-  "TlsBootstrapHostname":         "server.company.com", // change this
-  "TlsBootstrapCert":             "/etc/server.crt",
-  "TlsBootstrapKey":              "/etc/server.key",
+//  "TlsBootstrapType":             "server-path",
+//  "TlsBootstrapHostname":         "server.company.com", // change this
+//  "TlsBootstrapCert":             "/etc/server.crt",
+//  "TlsBootstrapKey":              "/etc/server.key",
 
   // license
   "LicenseFileLocation":          "/etc/license.rli"
