--- a/modules/gcp/replicated.conf
+++ b/modules/gcp/replicated.conf
@@ -3,18 +3,21 @@
   "DaemonAuthenticationType":     "password",
   "DaemonAuthenticationPassword": "password", // change this
 
+  // use self-signed (remove this if you want https
+  "TlsBootstrapType":             "self-signed",
+
   // configure https (remove this if you do not want https)
 //  "TlsBootstrapType":             "server-path",
 //  "TlsBootstrapHostname":         "server.company.com", // change this
-//  "TlsBootstrapCert":             "/etc/server.crt",
-//  "TlsBootstrapKey":              "/etc/server.key",
+//  "TlsBootstrapCert":             "/tmp/server.crt",
+//  "TlsBootstrapKey":              "/tmp/server.key",
 
   // license
-  "LicenseFileLocation":          "/etc/license.rli"
+  "LicenseFileLocation":          "/tmp/license.rli"
 
   // pre-flight
   "BypassPreflightChecks":        true,
 
   // application config
-  "ImportSettingsFrom":           "/etc/settings.conf",
+  "ImportSettingsFrom":           "/tmp/settings.conf",
 }
