--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,8 @@ jobs:
       uses: actions/checkout@v2.4.0
 
     - name: Get dependencies
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
       run: |
         go mod download
 
