--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
       uses: actions/checkout@v2.4.0
 
     - name: Get dependencies
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
       run: |
         go mod download
 
@@ -76,6 +76,8 @@ jobs:
       uses: actions/checkout@v2.4.0
 
     - name: Get dependencies
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
       run: |
         go mod download
         
