--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
         GOPRIVATE: "github.com/yugabyte/platform-go-client"
+        GONOPROXY: "github.com/yugabyte/platform-go-client"
       run: |
         go mod download
 
@@ -80,6 +81,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
         GOPRIVATE: "github.com/yugabyte/platform-go-client"
+        GONOPROXY: "github.com/yugabyte/platform-go-client"
       run: |
         go mod download
         
