--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,5 +129,6 @@ jobs:
 
       # clean up platform instance
       - name: Terraform Destroy
+        if: always()
         run: terraform destroy -force
         working-directory: ./acctest
