--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,91 @@ jobs:
       run: |
         go build -v .
 
+  azuretest:
+    name: Acceptance Test on Azure
+    needs: build
+    runs-on: [ self-hosted, azure ]
+    env:
+      TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
+      TF_VAR_PORTAL_PASSWORD: ${{ secrets.TF_VAR_PORTAL_PASSWORD }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_RESOURCE_GROUP: ${{ secrets.ARM_RESOURCE_GROUP }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+    timeout-minutes: 120
+    strategy:
+      fail-fast: false
+      matrix:
+        terraform:
+          # add other versions to support
+          - '1.1.*'
+
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: '1.16'
+        id: go
+
+      - uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: ${{ matrix.terraform }}
+          terraform_wrapper: false
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+
+      - name: Get dependencies
+        run: |
+          go mod download
+
+      - name: Make terraform provider installation directory
+        run: mkdir -p ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+
+      - name: Install
+        run: |
+          go build -o ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+
+      # use the modules to bring up platform instance for acceptance tests
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./acctest/azure
+
+      - name: Terraform Plan
+        run: terraform plan -no-color
+        working-directory: ./acctest/azure
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
+        working-directory: ./acctest/azure
+
+      - name: Set platform host
+        run: echo "YB_HOST=$(terraform output --raw host)" >> $GITHUB_ENV
+        working-directory: ./acctest/azure
+
+      - name: Set platform api key
+        run: echo "TF_ACC_TEST_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
+        working-directory: ./acctest/azure
+      # run acceptance tests
+      - name: TF acceptance tests
+        timeout-minutes: 120
+        env:
+          TF_ACC: "1"
+          YB_HOST: ${{ env.YB_HOST }}
+          TF_ACC_TEST_API_KEY: ${{ env.TF_ACC_TEST_API_KEY }}
+          # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
+          TF_ACC_TEST_YB_SOFTWARE_VERSION: "2.13.1.0-b69"
+
+        run: |
+          go test -v -cover -timeout 2h ./... -run "Azure"
+
+      # clean up platform instance
+      - name: Terraform Destroy
+        if: always()
+        run: terraform destroy -auto-approve
+        working-directory: ./acctest/azure
+
   awstest:
     name: Acceptance Test on AWS
     needs: build
