--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -269,9 +269,9 @@ jobs:
         env:
           TF_ACC: "1"
           YB_HOST: ${{ env.YB_HOST }}
-          TF_ACC_TEST_API_KEY: ${{ env.TF_ACC_TEST_API_KEY }}
+          YB_API_KEY: ${{ env.TF_ACC_TEST_API_KEY }}
           # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
-          TF_ACC_TEST_YB_SOFTWARE_VERSION: "2.13.1.0-b69"
+          YB_SOFTWARE_VERSION: "2.13.1.0-b69"
 
         run: |
           go test -v -cover -timeout 2h ./... -run "GCP"
