[PLAT-3711] move authentication fields into provider configuration (#18)
Previously, authentication fields were present in each resource/data-source configuration that required auth. An example:
```
resource "yb_cloud_provider" "gcp" {
  connection_info {
    cuuid     = yb_customer_resource.customer.cuuid
    api_token = yb_customer_resource.customer.api_token
  ...
  }
```
Now the auth is passed into the provider
```
provider "yb" {
  alias = "unauthenticated"
  host = "${module.gcp_yb_anywhere.public_ip}:80"
}
provider "yb" {
  alias = "authenticated"
  host = "${module.gcp_yb_anywhere.public_ip}:80"
}
```
and resources can specify which provider they wish to use. An example:
```
// no auth required here so we use the provider with no auth
resource "yb_installation" "installation" {
  provider = yb.unauthenticated
  ...
}
```
The ability to manage auth for multiple customers (if this somehow comes up) is given by creating multiple providers.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,17 +95,15 @@ jobs:
         working-directory: ./acctest/azure
 
       - name: Set platform api key
-        run: echo "TF_ACC_TEST_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
+        run: echo "YB_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
         working-directory: ./acctest/azure
       # run acceptance tests
       - name: TF acceptance tests
         timeout-minutes: 120
         env:
           TF_ACC: "1"
-          YB_HOST: ${{ env.YB_HOST }}
-          TF_ACC_TEST_API_KEY: ${{ env.TF_ACC_TEST_API_KEY }}
           # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
-          TF_ACC_TEST_YB_SOFTWARE_VERSION: "2.13.1.0-b69"
+          YB_SOFTWARE_VERSION: "2.13.1.0-b69"
 
         run: |
           go test -v -cover -timeout 2h ./... -run "Azure"
@@ -177,17 +175,15 @@ jobs:
         working-directory: ./acctest/aws
 
       - name: Set platform api key
-        run: echo "TF_ACC_TEST_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
+        run: echo "YB_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
         working-directory: ./acctest/aws
       # run acceptance tests
       - name: TF acceptance tests
         timeout-minutes: 120
         env:
           TF_ACC: "1"
-          YB_HOST: ${{ env.YB_HOST }}
-          TF_ACC_TEST_API_KEY: ${{ env.TF_ACC_TEST_API_KEY }}
           # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
-          TF_ACC_TEST_YB_SOFTWARE_VERSION: "2.13.1.0-b69"
+          YB_SOFTWARE_VERSION: "2.13.1.0-b69"
 
         run: |
           go test -v -cover -timeout 2h ./... -run "AWS"
@@ -261,17 +257,15 @@ jobs:
         working-directory: ./acctest/gcp
 
       - name: Set platform api key
-        run: echo "TF_ACC_TEST_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
+        run: echo "YB_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
         working-directory: ./acctest/gcp
       # run acceptance tests
       - name: TF acceptance tests
         timeout-minutes: 120
         env:
           TF_ACC: "1"
-          YB_HOST: ${{ env.YB_HOST }}
-          TF_ACC_TEST_API_KEY: ${{ env.TF_ACC_TEST_API_KEY }}
           # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
-          TF_ACC_TEST_YB_SOFTWARE_VERSION: "2.13.1.0-b69"
+          YB_SOFTWARE_VERSION: "2.13.1.0-b69"
 
         run: |
           go test -v -cover -timeout 2h ./... -run "GCP"
