Manually verified workflow, modularised installation

--- a/modules/resources/application_settings.conf
+++ b/modules/resources/application_settings.conf
@@ -4,9 +4,7 @@
     "value": "Lau788cPbaTQD5gh"
   },
   "enable_proxy": {},
-  "hostname": {
-    "value": "portal.sdu-dev.yugabyte.com"
-  },
+  "hostname": {},
   "http_proxy": {},
   "https_enabled": {
     "value": "0"
