Accomodate changes in replicated.yml

--- a/modules/resources/application_settings.conf
+++ b/modules/resources/application_settings.conf
@@ -5,13 +5,11 @@
   },
   "enable_proxy": {},
   "hostname": {},
-  "http_proxy": {},
+  "http_enabled": {
+    "value": "1"
+  },
   "https_enabled": {
     "value": "0"
-  },
-  "https_proxy": {},
-  "nginx_external_port": {
-    "value": "80"
   },
   "no_proxy": {},
   "prometheus_retention": {
