[PLAT-8433] Acceptance testing - Terraform provider
Summary:
Run acceptance tests locally and hook the same with GitHub Actions.
Acceptance tests working for cloud providers, universe creation
Command to run locally:

```
TF_ACC=1 go test -timeout 2h -v ./...
```
Env variables to set are as follows
**YB_HOST** - YBA host IP address with port 80
**TF_ACC_TEST_API_KEY** and **YB_API_KEY** - YBA Customer API token
**GOOGLE_APPLICATION_CREDENTIALS**, **GOOGLE_PROJECT**, **GOOGLE_REGION**, **GOOGLE_ZONE** - for GCP cloud provider and universe testing
**AWS_ACCESS_KEY_ID**, **AWS_SECRET_ACCESS_KEY** -  for AWS cloud provider and universe testing
**AZURE_CLIENT_ID**, **AZURE_CLIENT_SECRET**, **AZURE_SUBSCRIPTION_ID**, **AZURE_TENANT_ID**, **AZURE_RG** -  for Azure cloud provider and universe testing

Test Plan: Ensure Github workflows run without issue

Reviewers: sneelakantan

Reviewed By: sneelakantan

Differential Revision: https://phabricator.dev.yugabyte.com/D24858

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,11 @@ jobs:
     env:
       TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
       TF_VAR_PORTAL_PASSWORD: ${{ secrets.TF_VAR_PORTAL_PASSWORD }}
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_RESOURCE_GROUP: ${{ secrets.ARM_RESOURCE_GROUP }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      AZURE_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      AZURE_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      AZURE_RG: ${{ secrets.ARM_RESOURCE_GROUP }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      AZURE_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     timeout-minutes: 120
     strategy:
       fail-fast: false
@@ -102,8 +102,6 @@ jobs:
         timeout-minutes: 120
         env:
           TF_ACC: "1"
-          # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
-          YB_SOFTWARE_VERSION: "2.13.1.0-b69"
 
         run: |
           go test -v -cover -timeout 2h ./... -run "Azure"
@@ -182,8 +180,6 @@ jobs:
         timeout-minutes: 120
         env:
           TF_ACC: "1"
-          # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
-          YB_SOFTWARE_VERSION: "2.13.1.0-b69"
 
         run: |
           go test -v -cover -timeout 2h ./... -run "AWS"
@@ -201,7 +197,7 @@ jobs:
     env:
       TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
       TF_VAR_PORTAL_PASSWORD: ${{ secrets.TF_VAR_PORTAL_PASSWORD }}
-      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
       GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
       GOOGLE_REGION: ${{ secrets.GOOGLE_REGION }}
       GOOGLE_ZONE: ${{ secrets.GOOGLE_ZONE }}
@@ -264,8 +260,6 @@ jobs:
         timeout-minutes: 120
         env:
           TF_ACC: "1"
-          # TODO: this is hardcoded to release 790 (2.13.1.0-b69)
-          YB_SOFTWARE_VERSION: "2.13.1.0-b69"
 
         run: |
           go test -v -cover -timeout 2h ./... -run "GCP"
