--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -195,7 +195,7 @@ jobs:
     needs: build
     runs-on: [self-hosted, gcp]
     env:
-      TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
+      TF_VAR_RESOURCES_DIR: ${{ vars.TF_VAR_RESOURCES_DIR }}
       YB_CUSTOMER_PASSWORD: ${{ secrets.YB_CUSTOMER_PASSWORD }}
       GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
       GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
@@ -237,14 +237,7 @@ jobs:
 
       # use the modules to bring up platform instance for acceptance tests
       - name: Terraform Init
-        run: |
-          export TF_VAR_RESOURCES_DIR=$TF_VAR_RESOURCES_DIR
-          export YB_CUSTOMER_PASSWORD=$YB_CUSTOMER_PASSWORD
-          export GOOGLE_APPLICATION_CREDENTIALS=$secrets.GOOGLE_CREDENTIALS
-          export GOOGLE_PROJECT=$GOOGLE_PROJECT
-          export GOOGLE_REGION=$GOOGLE_REGION
-          export GOOGLE_ZONE=$GOOGLE_ZONE
-          terraform init
+        run: terraform init
         working-directory: ./acctest/gcp
 
       - name: Terraform Plan
