Test actions without github secrets 1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -238,7 +238,9 @@ jobs:
         working-directory: ./acctest/gcp
 
       - name: Terraform Plan
-        run: terraform plan -no-color
+        run: |
+          env | grep TF
+          terraform plan -no-color
         working-directory: ./acctest/gcp
 
       - name: Terraform Apply
