Test actions without github secrets 4

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -240,7 +240,7 @@ jobs:
 
       - name: Terraform Plan
         run: |
-          . ./home/deeptikumar/env_variables.sh
+          . /home/deeptikumar/env_variables.sh
           terraform plan -no-color
         working-directory: ./acctest/gcp
 
