--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -51,10 +51,15 @@ signs:
       - "--detach-sign"
       - "${artifact}"
 release:
+  mode: append
+  # Header for the release body.
+  header: |
+    ## {{ .Version }} ({{ .Date }})
+
   extra_files:
     - glob: 'terraform-registry-manifest.json'
       name_template: '{{ .ProjectName }}_{{ .Version }}_manifest.json'
   # If you want to manually examine the release before its live, uncomment this line:
   # draft: true
 changelog:
-  skip: true
+  skip: false
